fix: align value state header styles in input and combobox components

--- a/packages/main/src/themes/ValueStateMessage.css
+++ b/packages/main/src/themes/ValueStateMessage.css
@@ -140,6 +140,6 @@
 }
 
 /* Unset bottom border box-shadow in a specific case when the value state message is displayed on desktop in a popover and the suggestions list is empty */
-[ui5-responsive-popover].ui5-popover-with-value-state-header .ui5-valuestatemessage--root:has(+[ui5-list]:empty) {
+[ui5-responsive-popover].ui5-popover-with-value-state-header .ui5-valuestatemessage-root:has(+[ui5-list]:empty) {
 	box-shadow: none;
 }
